<resources>
    <string name="app_name" translatable="false">MoneyApp</string>
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>
    <string name="home_title">Home</string>
    <string name="accounts_title">Accounts</string>
    <string name="categories_title">Categories</string>
    <string name="transactions_title">Transactions</string>
    <string name="budget_title">Budget</string>
    <string name="debts_title">Debts</string>
    <string name="settings_title">Settings</string>
    <string name="tracker_options_title">Tracker Options</string>
    <string name="save">Save</string>
    <string name="plan">Plan</string>
    <string name="next">Next</string>
    <string name="main_currency">Main Currency</string>
    <string name="period">Period</string>
    <string name="period_month_pattern">Month, Start from %1$s</string>
    <string name="period_week_pattern">Week, Start from %1$s</string>
    <string name="period_month_label">Month</string>
    <string name="period_week_label">Week</string>
    <string name="type">Type</string>
    <string name="start_from_label">Start From</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="waiting">Waiting…</string>
    <string name="account_label">Account</string>
    <string name="category_label">Category</string>
    <string name="date_label">Date</string>
    <string name="amount_label">Amount</string>
    <string name="expense_label">Expense</string>
    <string name="income_label">Income</string>
    <string name="transfer_label">Transfer</string>
    <string name="transactions_type">Transaction Type</string>
    <string name="create_account">Create Account</string>
    <string name="details">Details</string>
    <string name="change_balance">Change Balance</string>
    <string name="balance">Balance</string>
    <string name="this_period">This Period</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="start_balance">Start Balance</string>
    <string name="last_period">Last Period</string>
    <string name="edit">Edit</string>
    <string name="edit_account_title">Edit Account</string>
    <string name="new_account_title">New Account</string>
    <string name="delete">Delete</string>
    <string name="name_hint">Name</string>
    <string name="account_currency">Account Currency</string>
    <string name="account_color">Account Color</string>
    <string name="account_name_is_required">Account name is required.</string>
    <string name="another_account_has_same_name">Another account already has such name.</string>
    <string name="continue_question">Continue?</string>
    <string name="account_will_be_deleted">Account will be deleted.</string>
    <string name="create_category">Create Category</string>
    <string name="create_subcategory">Create Subcategory</string>
    <string name="subcategories_title">Subcategories</string>
    <string name="comment_label">Comment</string>
    <string name="dest_account_label">Destination Account</string>
    <string name="amount_must_be_more_than_zero">Amount must be more than zero.</string>
    <string name="accounts_must_be_different">Source account and destination account must be different.</string>
    <string name="transaction_will_be_deleted">Transaction will be deleted.</string>
    <string name="more">More</string>
    <string name="rate_label">Rate</string>
    <string name="rate_pattern">%1$s = %2$s</string>
    <string name="active_items">Active (%1$s)</string>
    <string name="inactive">Inactive</string>
    <string name="change_icon">Change</string>
    <string name="new_category_title">New Category</string>
    <string name="edit_category_title">Edit Category</string>
    <string name="category_icon">Category Icon</string>
    <string name="category_will_be_deleted">Category will be deleted</string>
    <string name="category_name_is_required">Category name is required</string>
    <string name="subcategory_name_is_required">Subcategory name is required</string>
    <string name="subcategory_label">Subcategory</string>
    <string name="subcategory_will_be_deleted">Subcategory will be deleted.</string>
    <string name="fix_balance_category">Fix Balance</string>
    <string name="fix_balance_comment">Change balance manually.</string>
    <string name="income_pattern">Income: %1$s</string>
    <string name="expense_pattern">Expense: %1$s</string>
    <string name="tags">Tags</string>
    <string name="new_tag_hint">New Tag</string>
    <string name="group_by">Group By</string>
    <string name="grouping_date">Date</string>
    <string name="grouping_account">Account</string>
    <string name="grouping_category">Category</string>
    <string name="grouping_tag">Tag</string>
    <string name="grouping_transaction_type">Transaction Type</string>
    <string name="grouping_without_group">Without Group</string>
    <string name="without_tags">Without Tags</string>
    <string name="planning_transactions">Planning</string>
    <string name="create_budget_plan">Create Budget Plan</string>
    <string name="new_plan_title">New Plan</string>
    <string name="edit_plan_title">Edit Plan</string>
    <string name="depends_on">Depends on</string>
    <string name="add_dependency">Add Dependency</string>
    <string name="from_date_label">From</string>
    <string name="to_date_label">To</string>
    <string name="tag_label">Tag</string>
    <string name="limit_label">Limit</string>
    <string name="category_pattern">Category: %1$s</string>
    <string name="subcategory_pattern">Subcategory: %1$s</string>
    <string name="tag_pattern">Tag: %1$s</string>
    <string name="account_pattern">Account: %1$s</string>
    <string name="budget_pattern">Budget: %1$s</string>
    <string name="plan_name_is_required">Plan name is required.</string>
    <string name="at_least_one_dependency_is_required">At least dependency is required.</string>
    <string name="current_budget_plans">Current Plans</string>
    <string name="finished_budget_plans">Finished Plans</string>
    <string name="budget_plan_will_be_deleted">Budget plan will be deleted.</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="till_label">Till</string>
    <string name="contact_name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="new_debt_title">New Debt</string>
    <string name="edit_debt_title">Edit Debt</string>
    <string name="lend_money">I lend the money</string>
    <string name="borrow_money">I borrow the money</string>
    <string name="debt_name_is_required">Name is required.</string>
    <string name="urgent_debts">Urgent Debts</string>
    <string name="current_debts">Current Debts</string>
    <string name="finished_debts">Finished Debts</string>
    <string name="close">Close</string>
    <string name="phone">Phone</string>
    <string name="debt_will_be_deleted">Debt will be deleted.</string>
    <string name="contacts">Contacts</string>
    <string name="borrowing_amount">Borrowing Amount</string>
    <string name="lending_amount">Lending Amount</string>
    <string name="patterns">Transaction Patterns</string>
    <string name="create_pattern">Create Pattern</string>
    <string name="pattern_name_is_required">Pattern name is required.</string>
    <string name="pattern_will_be_deleted">Pattern will be deleted.</string>
    <string name="financial_options">Financial options</string>
    <string name="data_management">Data Management</string>
    <string name="categories_report_title">Categories Report</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="amount_was_copied_to_clipboard">Amount was copied to clipboard.</string>
    <string name="send">Send</string>
    <string name="export_transactions">Export Transactions</string>
    <string name="amount_pattern">Amount (%1$s)</string>
    <string name="dest_amount_label">Destination Amount</string>
    <string name="dest_amount_pattern">Destination Amount (%1$s)</string>
    <string name="data_was_saved_to">Data was saved to %1$s</string>
    <string name="transactions_was_sent">Transactions was sent.</string>
    <string name="no_data_for_export">There is no data for export.</string>
    <string name="reset_data">Reset Data</string>
    <string name="backup_label">Backup</string>
    <string name="path_label">Path</string>
    <string name="load">Load</string>
    <string name="restore_label">Restore</string>
    <string name="backup_was_saved">Backup was saved.</string>
    <string name="all_current_data_will_be_replaced">All current data will be replaced by a new data.</string>
    <string name="data_was_restored">Data was restored from archive.</string>
    <string name="file_name">File name</string>
    <string name="choose_file_title">Choose file</string>
    <string name="folder_was_not_opened">%1$s was not opened.</string>
    <string name="all_current_data_will_be_deleted">All current data will be deleted.</string>
    <string name="data_was_deleted">The data was deleted.</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="planning_transaction_was_applied">Planning transaction was applied</string>
    <string name="budget_is_over_pattern">Budget \'%1$s\' is over</string>
    <string name="hide_deleted">Hide Deleted</string>
    <string name="show_deleted">Show Deleted</string>
    <string name="restore">Restore</string>
    <string name="error">Error</string>
    <string name="debt_is_over">The debt \'%1$s\' is over</string>
    <string name="debt_is_almost_over">The debt \'%1$s\' is almost over</string>
    <string name="no_data">There is no data</string>
    <string name="transaction_was_deleted">Transaction was deleted</string>
    <string name="transaction_was_saved">Transaction was saved</string>
    <string name="pattern_was_deleted">Pattern was deleted</string>
    <string name="pattern_was_saved">Pattern was saved</string>
    <string name="account_was_deleted">Account was deleted</string>
    <string name="account_was_saved">Account was saved</string>
    <string name="budget_plan_was_deleted">Budget plan was deleted</string>
    <string name="budget_plan_was_saved">Budget plan was saved</string>
    <string name="category_was_deleted">Category was deleted</string>
    <string name="category_was_saved">Category was saved</string>
    <string name="subcategory_was_saved">Subcategory was saved</string>
    <string name="debt_was_deleted">Debt was deleted</string>
    <string name="debt_was_saved">Debt was saved</string>
    <string name="subcategory_was_deleted">Subcategory was deleted</string>
    <string name="deleted_accounts_was_shown">Deleted accounts was shown</string>
    <string name="reports_title">Reports</string>
    <string name="rest">Rest</string>
    <string name="expenditure_speed">Spending Speed</string>
    <string name="import_transactions">Import Transactions</string>
    <string name="back">Back</string>
    <string name="source_file_information">Source File Information</string>
    <string name="lines_count">Lines Number</string>
    <string name="bad_lines_count">Bad Lines Count</string>
    <string name="transform_to_category">Transform to Category</string>
    <string name="sync_title">Synchronization</string>
    <string name="units_settings">Unit Settings</string>
    <string name="sorting_categories">Sorting Categories</string>
    <string name="open_amount_dialog_on_new_transaction">Opening amount dialog on new transaction</string>
    <string name="fold_all">Fold All</string>
    <string name="unfold_all">Unfold All</string>
    <string name="donation_title">Make a donation</string>
    <string name="search_transactions">Search Transactions</string>
</resources>