<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/home_title" />

        <item
            android:id="@+id/accounts"
            android:icon="@drawable/ic_drawer_accounts"
            android:title="@string/accounts_title" />

        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_drawer_categories"
            android:title="@string/categories_title" />

        <item
            android:id="@+id/tags"
            android:icon="@drawable/ic_drawer_tags"
            android:title="@string/tags" />

        <item
            android:id="@+id/transactions"
            android:icon="@drawable/ic_drawer_transactions"
            android:title="@string/transactions_title" />

        <item
            android:id="@+id/budget"
            android:icon="@drawable/ic_drawer_budget"
            android:title="@string/budget_title" />

        <item
            android:id="@+id/debts"
            android:icon="@drawable/ic_drawer_debts"
            android:title="@string/debts_title" />

        <item
            android:id="@+id/reports"
            android:icon="@drawable/ic_drawer_reports"
            android:title="@string/reports_title" />

        <item
            android:id="@+id/sync"
            android:icon="@drawable/ic_drawer_sync"
            android:title="@string/sync_title" />

    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/settings_title" />

        <item
            android:id="@+id/donation"
            android:icon="@drawable/ic_drawer_donation"
            android:title="@string/donation_title" />
    </group>

</menu>