<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/report"
        android:icon="@drawable/ic_action_chart"
        android:title="@string/categories_report_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/create"
        android:icon="@drawable/ic_action_plus"
        android:title="@string/create_category"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_sorting"
        android:icon="@drawable/ic_action_sorting"
        android:title="@string/sorting_categories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_deleted"
        android:title="@string/show_deleted"
        app:showAsAction="never" />

    <item
        android:id="@+id/hide_deleted"
        android:title="@string/hide_deleted"
        app:showAsAction="never" />

</menu>