<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/restore"
        android:icon="@drawable/ic_action_restore"
        android:title="@string/restore"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/to_category"
        android:title="@string/transform_to_category"
        app:showAsAction="never" />

</menu>