<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/budget_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/budget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_budget_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/budget_title"
            android:textAppearance="@style/Money.TextAppearance.Subhead" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">

        <TextView
            style="@style/Money.TextAppearance.NoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data" />

        <Button
            android:id="@+id/create_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_budget_plan" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Money.TextAppearance.ListCaption" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limit_label"
            android:textAppearance="@style/Money.TextAppearance.Caption" />

        <TextView
            android:id="@+id/limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Money.TextAppearance.Body1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expenditure_speed"
            android:textAppearance="@style/Money.TextAppearance.Caption" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Money.TextAppearance.Body1" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Money.TextAppearance.Error"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/limit_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:indeterminateOnly="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_label"
                    android:textAppearance="@style/Money.TextAppearance.Caption" />

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Money.TextAppearance.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/rest"
                    android:textAppearance="@style/Money.TextAppearance.Caption" />

                <TextView
                    android:id="@+id/rest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textAppearance="@style/Money.TextAppearance.Body1" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/warning_budgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Money.TextAppearance.Error"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>